cmake_minimum_required(VERSION 3.28)
project(farcical LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 23)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

include(FetchContent)
FetchContent_Declare(SFML
    GIT_REPOSITORY https://github.com/SFML/SFML.git
    GIT_TAG 3.0.1
    GIT_SHALLOW ON
    EXCLUDE_FROM_ALL
    SYSTEM)
FetchContent_MakeAvailable(SFML)

add_executable(main
                    src/app.cpp
                    src/render.cpp
                    src/main.cpp
                    src/ui/manager.cpp
                    src/ui/menu.cpp
                    src/ui/label.cpp
                    src/ui/button.cpp
        src/resource/config.cpp
        src/resource/manager.cpp
        src/color.cpp
)
target_compile_features(main PRIVATE cxx_std_23)
target_link_libraries(main PRIVATE SFML::Graphics)
